--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     // Docsify Configuration (see https://docsify.js.org/#/configuration)
     window.$docsify = {
       name: 'Simple Docsify Template',
-
+      coverpage: true,
       // Sidebar Configuration
       auto2top: true,
       loadSidebar: true,
